Change some status codes
POST success: 200 OK -> 201 Created
GET one fail: 400 Bad Request -> 404 Not Found
